# so_long

./: .gitignore  CMakeLists.txt  Makefile  README.md  map.ber  so_long
img/: fish.xpm  floor.xpm  house.xpm  player.xpm  wall.xpm
includes/: so_long.h
maps/: no_player.ber  not_rectang.ber  wall_error.ber  worng_char.ber
source/: check_file.c  game_utils.c  get_next_line.c  get_next_line_utils.c  hook_utils.c  image.c  map_init.c  map_parse.c  map_validate.c  player.c  so_long.c
